# OMA-AI

./: .agent-state.json  .dockerignore  .env.example  .env.production  .eslintrc.json  .gitignore  .gitkeep  .moltverr_agent.json  .moltverr_claim_url  .moltverr_key  .nextignore  .npmrc  .spawner_state.json  .vercelignore  1306275LOG_FILE  ACTION-PLAN.md  AGENT-DISCUSSIONS-SKILL.md  AGENT-STATUS.md  AGENTIC_WEB_DEEP_DIVE.md  AGENTS.md  AI_AGENT_BUILDER_PLAN.md  API_FIX_PLAN.md  ARCHIVE_SUMMARY.md  AUDIT-COMPLETION-SUMMARY.md  AUDIT-REPORT-2026-02-07-UPDATED.md  AUDIT-REPORT-2026-02-07.md  AUDIT-REPORT-FINAL.md  AUDIT-SUMMARY.md  AUDIT.md  AUDIT_REPORT.md  BOOT.md  BRAND.md  BROWSER-AUDIT-REPORT.md  CHANGELOG.md  CHECK_PRODUCTION_STATUS.sh  CLEANUP_REPORT.md  CODEBASE.md  CODEBASE_ANALYSIS.md  CODEBASE_AUDIT_REPORT.md  CODEBASE_CONVENTIONS.md  (+228 more)
.clawhub/: lock.json
.frankie-os/: frankie-os.db-shm  frankie-os.db-wal
.github/: PULL_REQUEST_TEMPLATE.md
.jules/: bolt.md
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
.memelord/: init-memories.json  memory.db-wal
.openclaw/: workspace-state.json
.vercel/: project.json
OMA-Legacy/: .env.example  .env.test  .gitignore  AUDIT_REPORT.md  Dockerfile  PRODUCTION_GUIDE.md  README.md  WIKI.md  docker-compose.dev.yml  eslint.config.mjs  nginx.conf  oma.config.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  wrangler.toml
OMA-Legacy/sdk-python/: README.md  pyproject.toml  setup.py
OMA-Legacy/sdk-python/oma/: __init__.py  a2a.py  client.py  mcp.py  x402.py
api/: llm.js  (+8 more)
(+1968 files in other folders)
