[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oma-sdk"
version = "1.0.0"
description = "OpenMarketAccess SDK - Official Python SDK"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "OpenMarketAccess"}
]
keywords = ["oma", "openmarketaccess", "sdk", "web3", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
solana = ["solana>=0.31.0"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "black>=23.0.0"]

[project.urls]
Homepage = "https://github.com/openmarketaccess/oma-sdk-python"
Documentation = "https://docs.oma.ai"
Repository = "https://github.com/openmarketaccess/oma-sdk-python"
